Supertux Release 0.3.5 (TBA)
--------------------------------

Tracking major changes in-situ:
glow effects
new badguys: iceflame, ghostflame, livefire, goldbomb, smartblock
new bonuses: coinrain, coinexplode
statistics improved
icy island levels tweaked
new sounds
massive improvements to localization
efficiency tweaks
move to SDL2
menus reworked
addon manager improved
new tilemap- halloween

Supertux Release 0.3.4 (2013-07)
--------------------------------

It's been more than three years since the last development snapshot for
Milestone 2 of SuperTux, making this a bit overdue.  Once again it is hard to
say what the most notable changes are, but one thing players should notice is
a greater wealth of levels to play through an expanded avalibility of add-ons.

Additionally, SuperTux development has moved to Google Code.  Check it out at:

  http://code.google.com/p/supertux/

If you are intersted in contribuiting to SuperTux, please do so.  The more
people working on the project, the faster development can continue.  The hope
is that this release will generate more interest which will lead to more
frequent releases.  You can refer to the wiki page on "Contributing" to get
started:

  http://supertux.lethargik.org/wiki/Contributing

And of course, enjoy the game and have fun!



Supertux Release 0.3.3 (2010-02-26)
-----------------------------------

After more than three years of development the SuperTux development team has
agreed to package a development snapshot of Milestone 2 of our jump and run
game.

Unfortunatly, after such a long time it's hard to say what the most notable
changes are. We hope that the game engine is more stable (or at least more
advanced ;) and that the game is more fun to play overall.

If you want to help improve SuperTux, please don't hesitate to join us. We're
always looking for interested people to design levels, graphics, test the
current development version and / or contribute code. To get in touch with us,