@@ -70,6 +70,12 @@ Tux::draw(DrawingContext& context)
     case ICE_BONUS:
       sprite->set_action(moving ? "ice-walking" : "ice-stop");
       break;
+    case AIR_BONUS:
+      sprite->set_action(moving ? "ice-walking" : "ice-stop");
+      break;
+    case EARTH_BONUS:
+      sprite->set_action(moving ? "fire-walking" : "fire-stop");
+      break;
     case NO_BONUS:
       sprite->set_action(moving ? "small-walking" : "small-stop");
       break;
