@@ -14,6 +14,7 @@ move to SDL2
 menus reworked
 addon manager improved
 new tilemap- halloween
+new powerups: air- and earth-flower
 
 Supertux Release 0.3.4 (2013-07)
 --------------------------------
